e_metrobus/static/sass/_layout.scss
$top-bar-height: 2.8rem;

.grid-container {
	overflow: hidden;
}

.l-scroll,
.l-no-scroll {
	position: relative;
	height: 100%;
}

.l-no-scroll {
	overflow: hidden;
}

.l-scroll--nonav {
	.top-bar,
	.footer {
		display: none;
	}
	.main-content {
		margin-top: 0;
		margin-bottom: 0;
	}
}

.l-scroll--nav {
	.top-bar,
	.footer {
		position: fixed;
	}
	.main-content {
		margin-top: $top-bar-height;
		margin-bottom: $footer-height;
	}
	&.l-scroll--nofooter {
		.main-content {
			height: calc(100vh - #{$top-bar-height});
			margin-bottom: 0;
		}
		section.footer {
			display: none;
		}
	}
}

.l-no-scroll--nav {
	.top-bar,
	.footer {
		position: fixed;
	}
	.main-content {
		margin-top: $top-bar-height;
		height: calc(100vh - #{$top-bar-height} - #{$footer-height})
	}
}

.l-no-scroll--nonav {
	.top-bar,
	.footer {
		display: none;
	}
	.main-content {
		margin-top: 0;
		margin-bottom: 0;
		height: 100vh;
	}
}

.main-content {
	padding: 0;
	.grid-container {
    padding-left: 0.25rem;
    padding-right: 0.25rem;
	}
}

